--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Stack Problems
-description: My Personal Stack Problems
-author: Agus Makmun
-github: https://github.com/agusmakmun
-about: I'm Programmer for Python & Django. I've made quite a few web apps, especially on Django.
-disqus_shortname: stackproblems
-google_analytics: UA-XXXXXXXX-Y
+title: Network Problems
+description: My Personal Network
+author: He Zhidong
+github: https://github.com/zhidonghe
+about: I'm Researcher for Networks.
+disqus_shortname: mynetworks
+google_analytics: UXXXXXXXX
 
 enableTags: true
 tagarray: []
@@ -23,22 +23,18 @@ social:
       link: "#"
     - icon: fa-stack-exchange
       link: "#"
-    - icon: fa-github
-      link: "https://github.com/agusmakmun"
 
 share:
   twitter_username: github.io
-  fb_appid: 1749788565247320
+  fb_appid: "#"
 
 urls:
     - text: About Me
       url: /about/
     - text: My Projects
       url: /projects/
-    - text: XML Feed
-      url: /feed.xml
 
-url: "https://agusmakmun.github.io"
+url: "https://zhidonghe.github.io"
 baseurl: ""
 paginate: 20
 per_page: 20
