--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Network Problems
 description: My Personal Network
 author: He Zhidong
 github: https://github.com/zhidonghe
-about: I'm Researcher for Networks.
+about: A Researcher for Networks.
 disqus_shortname: mynetworks
 google_analytics: UXXXXXXXX
 
