--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: Network Problems
+title: Personal Update
 description: My Personal Network
 author: He Zhidong
 github: https://github.com/zhidonghe
+email: zhidonghe@outlook.com
 about: A Researcher for Networks.
 disqus_shortname: mynetworks
 google_analytics: UXXXXXXXX
